finish redstone part of update